[package]
name = "print-jobber"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["tokio"] }
escpos = { version = "0.17.0", features = ["usb"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
